# aimly2

./: README.md  babel.config.js  package-lock.json  package.json  webpack.config.js
app/: app.js  main-page.js
app/auth/: clerk-provider.js  sign-in-screen.js
app/components/profile/: profile-header.xml  skill-levels.xml  stats-display.xml
app/models/: calcutta.js  challenge.js  leaderboard.js  tournament.js  user-profile.js
app/services/: api.js  calcutta-service.js  challenge-service.js  filter-service.js  pool-hall-service.js  pose-detection-service.js  shot-analysis-service.js  tournament-service.js  video-processing-service.js
app/tests/services/: calcutta-service.test.js  shot-analysis.test.js  tournament-service.test.js
app/views/challenges/: challenge-list.js  challenge-list.xml  money-match-dialog.xml  (+4 more)
backend/: .env  README.md  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: challenges.py  leaderboard.py  payments.py  shot_analysis.py  tournaments.py  users.py
backend/app/core/: config.py
backend/app/db/: base.py
backend/app/models/: challenge.py  shot_analysis.py  tournament.py  user.py
backend/app/schemas/: user.py
backend/tests/: conftest.py  test_shot_analysis.py  test_tournaments.py  test_users.py
landing/: package-lock.json  package.json  tailwind.config.ts
landing/app/: globals.css  layout.tsx  page.tsx
landing/components/: features.tsx  footer.tsx  hero.tsx  navbar.tsx  pricing.tsx  theme-toggle.tsx
landing/lib/: api.ts
(+36 files in other folders)
